# combine

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  deps.yml  pyproject.toml  setup.py
.github/workflows/: changerelease.yml  deps.yml  docs.yml  nextrelease.yml  test.yml
combine/: __init__.py  babel.cfg  cli.py  components.py  config.py  core.py  dev.py  logger.py
combine/base_content/: error.template.html  markdown.template.html  redirect.template.html
combine/checks/: __init__.py  base.py  core.py  duplicate_id.py  empty_build.py  favicon.py  file_size.py  img_alt.py  issues.py  links.py  meta.py  mixed_content.py  open_graph.py  registry.py  runner.py  seo.py  src.py  states.py  title.py
combine/files/: __init__.py  core.py  error.py  html.py  ignored.py  keep.py  markdown.py  redirect.py  sass.py  scss.py  template.py  utils.py
combine/jinja/: __init__.py  code.py  exceptions.py  include_raw.py  markdown.py  references.py  urls.py
combine/jinja_extensions/: __init__.py  code.py  markdown.py
docs/: .gitignore  combine.yml  netlify.toml  tailwind.config.js  variables.md
docs/content/: 404-files.md  _sidebar.html  absolute-urls.md  base.template.html  build-steps.html  build.md  checks.md  code.html  code.md  deploy.md  getting-started.html  getting-started.md  ignore.md  index.html  index.md  internal-links.md  jinja.md  markdown.html  markdown.md  partials.md  redirects.md  style.css  tailwind.config.js  templates.html  templates.md  themes.md  variables.html  variables.md
docs/content/assets/: _main.css  _tailwind.css
docs/content/config/: content-paths.md  output-path.md  steps.md  variables.md
docs/theme/: package.json  tailwind.config.js
docs/theme/content/: markdown.template.html  theme.template.html
docs/theme/content/assets/: _main.css  _main.js
docs/theme/scripts/: install
scripts/: docs  format  install  mypy  pre-commit  release  test
tests/: test_build.py
tests/checks/: test_duplicate_id.py  test_img_alt.py  test_meta.py  test_mixed_content.py  test_open_graph.py  test_title.py
tests/checks/snapshots/: snap_test_duplicate_id.py  snap_test_img_alt.py  snap_test_meta.py  snap_test_mixed_content.py  snap_test_open_graph.py  snap_test_title.py
tests/site/: combine.yml
tests/site/components/: Button.html  Tag.html
tests/site/content/: base.template.html  index.html  markdown.md  pricing.html
tests/site/output_expected/: index.html
tests/site/output_expected/markdown/: index.html
tests/site/output_expected/pricing/: index.html
