[tool.poetry]
name = "combine"
version = "2.4.0"
description = "A straightforward static site builder."
authors = ["Dropseed <python@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://combine.dropseed.dev"
documentation = "https://combine.dropseed.dev"
repository = "https://github.com/dropseed/combine"
keywords = ["static", "site", "generator", "jinja"]

[tool.poetry.scripts]
combine = "combine.cli:cli"

[tool.poetry.dependencies]
python = "^3.6.2"
jinja2 = ">2.11.2"
click = ">7.1.2"
watchdog = "^2.1.6"
pyyaml = "^5.3.1"
beautifulsoup4 = "^4.9.1"
Pygments = "^2.6.1"
markdown = "^3.2.2"
python-frontmatter = "^1.0.0"
typing-extensions = {version = "^3.7.4", python = "<3.8"}
cls-client = "^1.2.0"
barrel = "^0.2.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
black = "^19.10b0"
snapshottest = "^0.6.0"
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
