[tool.poetry]
name = "combine"
version = "2.11.0"
description = "A straightforward static site builder."
authors = ["Dropseed <python@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://combine.dropseed.dev"
documentation = "https://combine.dropseed.dev"
repository = "https://github.com/dropseed/combine"
keywords = ["static", "site", "generator", "jinja"]

[tool.poetry.scripts]
combine = "combine.cli:cli"

[tool.poetry.dependencies]
python = "^3.7.0"
Jinja2 = "^3.1.2"
click = ">7.1.2"
watchdog = "^2.1.6"
beautifulsoup4 = "^4.9.1"
Pygments = "^2.6.1"
markdown = "^3.2.2"
python-frontmatter = "^1.0.0"
typing-extensions = {version = "^3.7.4", python = "<3.8"}
cls-client = "^1.2.0"
PyYAML = "^6.0"
barrel = "^0.3.0"
honcho = "^1.1.0"
repaint = "^0.1.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
black = "^22.1.0"
snapshottest = "^0.6.0"
pytest = "^7.0.1"
mypy = "^0.971"
lxml = "^4.9.1"
types-Markdown = "^3.4.0"
types-PyYAML = "^6.0.10"
types-setuptools = "^63.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
